# mcp-client-multi-server

./: .gitignore  CLAUDE.md  CLEANUP.md  CRUNCHBASE_SERVER_RECOMMENDATIONS.md  PROGRESS_METHOD_MIGRATION.md  README.md  crunchbase_search.py  fix_context_progress.md  main.py  progress_fix_conclusion.md  pyproject.toml  run_tests.py  sample_config.json  test-all-readme-examples.sh  test-cli-examples.sh  test-filesystem-only.sh  test-readme-examples.sh  test-server-lifecycle.sh  test-server-specific.sh  test_client_behavior.py  test_crunchbase.py  test_crunchbase_connection.py  test_direct_cookies.py  test_filesystem_server.py  test_fixed_client.py  test_fixed_crunchbase.py  test_npx_server.py  test_playwright_launch.py  test_process_persistence.py  test_session_cookies.py  test_sse.py
docs/: CRUNCHBASE_INTEGRATION.md
examples/: config.json  echo_server.py  multi_transport_echo.py  sse_server.py  streamable_http_server.py  websocket_server.py
mcp_client_multi_server/: __init__.py  cli.py  client.py
tests/: __init__.py  conftest.py  debug_playwright.py  test_additional_servers.py  test_all_transports.py  test_audio_interface.py  test_echo_transports.py  test_error_handling.py  test_fetch_server.py  test_filesystem_server.py  test_module_integration_examples.py  test_npx_servers.py  test_playwright_port_handling.py  test_sequential_thinking.py  test_server_cleanup.py  test_server_lifecycle.py  test_servers.py  test_transports.py  test_transports_integration.py  test_uvx_transport.py
