[project]
name = "mcp-client-multi-server"
version = "0.1.0"
description = "A multi-server MCP client compatible with Claude Desktop configs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
