[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-client-multi-server"
version = "0.1.0"
description = "A multi-server MCP client compatible with Claude Desktop configs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "MCP Maintainers"}
]
dependencies = [
    "fastmcp>=2.3.0",
    "psutil>=5.9.0",
]

[project.scripts]
mcp-client = "mcp_client_multi_server.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
# UV-specific configurations
index-url = "https://pypi.org/simple"
